--- a/config.json
+++ b/config.json
@@ -1,14 +1,16 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 2,
+  "taskCount": 3,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
-    "gb9hhekti85m1veyep9obeciyncbvauufjx1"
+    "gb9hhekti85m1veyep9obeciyncbvauufjx1",
+    "caon69yqxrgmi913qbxja99qovrwmuuezf52"
   ],
   "userSubmittedFiles": [
     "task1.py",
-    "task2.py"
+    "task2.py",
+    "task3.py"
   ]
 }
