solution for task-4

--- a/config.json
+++ b/config.json
@@ -1,16 +1,18 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 3,
+  "taskCount": 4,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
     "gb9hhekti85m1veyep9obeciyncbvauufjx1",
-    "caon69yqxrgmi913qbxja99qovrwmuuezf52"
+    "caon69yqxrgmi913qbxja99qovrwmuuezf52",
+    "rhw2ipvnue198fa9o5hul8aydlnxqwyfkd7z"
   ],
   "userSubmittedFiles": [
     "task1.py",
     "task2.py",
-    "task3.py"
+    "task3.py",
+    "task4.py"
   ]
 }
