--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 7,
+  "taskCount": 8,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -10,7 +10,8 @@
     "rhw2ipvnue198fa9o5hul8aydlnxqwyfkd7z",
     "lv16pqwc3pdr4aof2dwmyynouyqdvtzdf3qp",
     "njlse2kg9kdrz5r29tleh2f2ntkj59qedf1y",
-    "xaa9q1ud4uwdfgxktx2e9pmh44valtyoi2fk"
+    "xaa9q1ud4uwdfgxktx2e9pmh44valtyoi2fk",
+    "9wucxbt31jntkoigurfuq1po2gscpltn1wcq"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -19,6 +20,7 @@
     "task4.py",
     "task5.py",
     "task6.py",
-    "task7.py"
+    "task7.py",
+    "task8.py"
   ]
 }
