solution for task-10

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 9,
+  "taskCount": 10,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -12,7 +12,8 @@
     "njlse2kg9kdrz5r29tleh2f2ntkj59qedf1y",
     "xaa9q1ud4uwdfgxktx2e9pmh44valtyoi2fk",
     "9wucxbt31jntkoigurfuq1po2gscpltn1wcq",
-    "i6tawkddjtoe6z1oied5vp5t43v8jjvqkxb8"
+    "i6tawkddjtoe6z1oied5vp5t43v8jjvqkxb8",
+    "do98xiwsv6f3kzsyky56cmqrdeuikr8zb4g2"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -23,6 +24,7 @@
     "task6.py",
     "task7.py",
     "task8.py",
-    "task9.py"
+    "task9.py",
+    "task10.py"
   ]
 }
