--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 12,
+  "taskCount": 13,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -15,7 +15,8 @@
     "i6tawkddjtoe6z1oied5vp5t43v8jjvqkxb8",
     "do98xiwsv6f3kzsyky56cmqrdeuikr8zb4g2",
     "qpl3ojr2zultvilritewge9q8t4n5mq23igx",
-    "vdlxqaflbiqmb6wuht2d8o7zdmmxjbyialdj"
+    "vdlxqaflbiqmb6wuht2d8o7zdmmxjbyialdj",
+    "bu815er1jfo36m1u2gykfgoenvkeqypqhu57"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -29,6 +30,7 @@
     "task9.py",
     "task10.py",
     "task11.py",
-    "task12.py"
+    "task12.py",
+    "task13.py"
   ]
 }
