--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 14,
+  "taskCount": 15,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -17,7 +17,8 @@
     "qpl3ojr2zultvilritewge9q8t4n5mq23igx",
     "vdlxqaflbiqmb6wuht2d8o7zdmmxjbyialdj",
     "bu815er1jfo36m1u2gykfgoenvkeqypqhu57",
-    "3jdmz53orkqjedzz2rjun4k2kdk1z15auhy3"
+    "3jdmz53orkqjedzz2rjun4k2kdk1z15auhy3",
+    "z78sugljx49y78tpakhrwyeoaqy75oetvl7g"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -33,6 +34,7 @@
     "task11.py",
     "task12.py",
     "task13.py",
-    "task14.py"
+    "task14.py",
+    "task15.py"
   ]
 }
