--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 15,
+  "taskCount": 16,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -18,7 +18,8 @@
     "vdlxqaflbiqmb6wuht2d8o7zdmmxjbyialdj",
     "bu815er1jfo36m1u2gykfgoenvkeqypqhu57",
     "3jdmz53orkqjedzz2rjun4k2kdk1z15auhy3",
-    "z78sugljx49y78tpakhrwyeoaqy75oetvl7g"
+    "z78sugljx49y78tpakhrwyeoaqy75oetvl7g",
+    "a5qpxlovh9usxt6hrhx7r8u9yr69k84ojw8p"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -35,6 +36,7 @@
     "task12.py",
     "task13.py",
     "task14.py",
-    "task15.py"
+    "task15.py",
+    "task16.py"
   ]
 }
