--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 16,
+  "taskCount": 17,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -19,7 +19,8 @@
     "bu815er1jfo36m1u2gykfgoenvkeqypqhu57",
     "3jdmz53orkqjedzz2rjun4k2kdk1z15auhy3",
     "z78sugljx49y78tpakhrwyeoaqy75oetvl7g",
-    "a5qpxlovh9usxt6hrhx7r8u9yr69k84ojw8p"
+    "a5qpxlovh9usxt6hrhx7r8u9yr69k84ojw8p",
+    "71b4p1v41b5wcemj5x5tsql85xxrmpxglqvi"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -37,6 +38,7 @@
     "task13.py",
     "task14.py",
     "task15.py",
-    "task16.py"
+    "task16.py",
+    "task17.py"
   ]
 }
