--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 17,
+  "taskCount": 18,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -20,7 +20,8 @@
     "3jdmz53orkqjedzz2rjun4k2kdk1z15auhy3",
     "z78sugljx49y78tpakhrwyeoaqy75oetvl7g",
     "a5qpxlovh9usxt6hrhx7r8u9yr69k84ojw8p",
-    "71b4p1v41b5wcemj5x5tsql85xxrmpxglqvi"
+    "71b4p1v41b5wcemj5x5tsql85xxrmpxglqvi",
+    "g46an5ekiiorng5dvccovj5d6gnurgk7e7cy"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -39,6 +40,7 @@
     "task14.py",
     "task15.py",
     "task16.py",
-    "task17.py"
+    "task17.py",
+    "task18.py"
   ]
 }
