--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 18,
+  "taskCount": 19,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -21,7 +21,8 @@
     "z78sugljx49y78tpakhrwyeoaqy75oetvl7g",
     "a5qpxlovh9usxt6hrhx7r8u9yr69k84ojw8p",
     "71b4p1v41b5wcemj5x5tsql85xxrmpxglqvi",
-    "g46an5ekiiorng5dvccovj5d6gnurgk7e7cy"
+    "g46an5ekiiorng5dvccovj5d6gnurgk7e7cy",
+    "w9m9gsxkc5ceq1u2ku6sbkqceuwrycpuzuuy"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -41,6 +42,7 @@
     "task15.py",
     "task16.py",
     "task17.py",
-    "task18.py"
+    "task18.py",
+    "task19.py"
   ]
 }
