--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 19,
+  "taskCount": 20,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -22,7 +22,8 @@
     "a5qpxlovh9usxt6hrhx7r8u9yr69k84ojw8p",
     "71b4p1v41b5wcemj5x5tsql85xxrmpxglqvi",
     "g46an5ekiiorng5dvccovj5d6gnurgk7e7cy",
-    "w9m9gsxkc5ceq1u2ku6sbkqceuwrycpuzuuy"
+    "w9m9gsxkc5ceq1u2ku6sbkqceuwrycpuzuuy",
+    "hbiu1i7awx1rvhul6bvot8cq7jal2b5s56cp"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -43,6 +44,7 @@
     "task16.py",
     "task17.py",
     "task18.py",
-    "task19.py"
+    "task19.py",
+    "task20.py"
   ]
 }
