solution for task-21

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 20,
+  "taskCount": 21,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -23,7 +23,8 @@
     "71b4p1v41b5wcemj5x5tsql85xxrmpxglqvi",
     "g46an5ekiiorng5dvccovj5d6gnurgk7e7cy",
     "w9m9gsxkc5ceq1u2ku6sbkqceuwrycpuzuuy",
-    "hbiu1i7awx1rvhul6bvot8cq7jal2b5s56cp"
+    "hbiu1i7awx1rvhul6bvot8cq7jal2b5s56cp",
+    "8nh4zihev9e8syuippn7rbb55qnf7it7gc5o"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -45,6 +46,7 @@
     "task17.py",
     "task18.py",
     "task19.py",
-    "task20.py"
+    "task20.py",
+    "task21.py"
   ]
 }
