solution for task-22

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 21,
+  "taskCount": 22,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -24,7 +24,8 @@
     "g46an5ekiiorng5dvccovj5d6gnurgk7e7cy",
     "w9m9gsxkc5ceq1u2ku6sbkqceuwrycpuzuuy",
     "hbiu1i7awx1rvhul6bvot8cq7jal2b5s56cp",
-    "8nh4zihev9e8syuippn7rbb55qnf7it7gc5o"
+    "8nh4zihev9e8syuippn7rbb55qnf7it7gc5o",
+    "r6y1tugn3so9aog8ua92d82blvtps8s2xi33"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -47,6 +48,7 @@
     "task18.py",
     "task19.py",
     "task20.py",
-    "task21.py"
+    "task21.py",
+    "task22.py"
   ]
 }
