solution for task-23

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 22,
+  "taskCount": 23,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -25,7 +25,8 @@
     "w9m9gsxkc5ceq1u2ku6sbkqceuwrycpuzuuy",
     "hbiu1i7awx1rvhul6bvot8cq7jal2b5s56cp",
     "8nh4zihev9e8syuippn7rbb55qnf7it7gc5o",
-    "r6y1tugn3so9aog8ua92d82blvtps8s2xi33"
+    "r6y1tugn3so9aog8ua92d82blvtps8s2xi33",
+    "ik54aeqbjqytioe16iba2xniuqqcrl7ebg31"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -49,6 +50,7 @@
     "task19.py",
     "task20.py",
     "task21.py",
-    "task22.py"
+    "task22.py",
+    "task23.py"
   ]
 }
