--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 25,
+  "taskCount": 26,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -28,7 +28,8 @@
     "r6y1tugn3so9aog8ua92d82blvtps8s2xi33",
     "ik54aeqbjqytioe16iba2xniuqqcrl7ebg31",
     "6f9w3x5nx4r8sauvb4c6ebgid91erf6qrg34",
-    "uemoz4xjfo3ixipluy7l2ebew5m9e1x3aldc"
+    "uemoz4xjfo3ixipluy7l2ebew5m9e1x3aldc",
+    "g8gsu6j2a4rvx2owse65xid72roe2img5dzy"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -55,6 +56,7 @@
     "task22.py",
     "task23.py",
     "task24.py",
-    "task25.py"
+    "task25.py",
+    "task26.py"
   ]
 }
