solution for task-28

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 27,
+  "taskCount": 28,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -30,7 +30,8 @@
     "6f9w3x5nx4r8sauvb4c6ebgid91erf6qrg34",
     "uemoz4xjfo3ixipluy7l2ebew5m9e1x3aldc",
     "g8gsu6j2a4rvx2owse65xid72roe2img5dzy",
-    "kntz3f1qeheu3swdbxky8qaatiw9dxjr7h5z"
+    "kntz3f1qeheu3swdbxky8qaatiw9dxjr7h5z",
+    "e2a3gpro4h3krzvve4suipnh3uyd9yquig8e"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -59,6 +60,7 @@
     "task24.py",
     "task25.py",
     "task26.py",
-    "task27.py"
+    "task27.py",
+    "task28.py"
   ]
 }
