--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "learningTrack": "Python",
   "userName": "Faz",
-  "taskCount": 28,
+  "taskCount": 29,
   "keys": [
     "5e06b81de9ac43218a974785ffce8146",
     "igkdejl8tofmvlvpk8y33yizs4u2fgxlcmgz",
@@ -31,7 +31,8 @@
     "uemoz4xjfo3ixipluy7l2ebew5m9e1x3aldc",
     "g8gsu6j2a4rvx2owse65xid72roe2img5dzy",
     "kntz3f1qeheu3swdbxky8qaatiw9dxjr7h5z",
-    "e2a3gpro4h3krzvve4suipnh3uyd9yquig8e"
+    "e2a3gpro4h3krzvve4suipnh3uyd9yquig8e",
+    "gbcezlt3o46bmh2ybssu9h6q5rewgzkqfhp8"
   ],
   "userSubmittedFiles": [
     "task1.py",
@@ -61,6 +62,7 @@
     "task25.py",
     "task26.py",
     "task27.py",
-    "task28.py"
+    "task28.py",
+    "task29.py"
   ]
 }
